Cascading Change Log

2.0.5 [unreleased]

  Fix for possible NPE when debug logging is enabled during planning.

  Improved error message when Hadoop serializer for a given type cannot be found in some cases.

2.0.4

  Removed remnant log4j dependency in c.t.h.i.MultiInputSplit.

  Fixed issue where c.t.Tap may fail resolving outgoing fields.

  Added missing #equals() method to c.t.TupleEntry that will honor field j.u.Comparator instances.

  Fixed issue where c.f.s.SparseTupleComparator would not properly sort with re-ordered sort fields.

  Fixed issue where c.t.TupleEntryChainIterator#hasNext() would fail if called more than once.

  Updated c.t.h.Hfs internal methods call #getPath() instead of #getIdentifier() so sub-classes can override.

  Updated the #verify() methods on c.s.l.TextLine and c.s.h.TextLine to be protected.

2.0.3

  Fixed issue where the c.f.p.FlowPlanner would allow declared fields in a checkpoint c.t.Tap instance.

  Fixed issue where c.f.Flow#writeStepsDot() would fail if the Flow was planned by the local mode planner.

  Added c.f.h.u.ObjectSerializer to allow for custom state serializers. To override the default
  c.f.h.u.JavaObjectSerializer, specify the name of a class that implements ObjectSerializer (and optionally
  implements o.a.h.c.Configurable) via the "cascading.util.serializer" property. @sritchie

2.0.2

  Added cascading.version property to Hadoop job configuration.

  Removed tests for deprecated method c.t.Tuple#parse().

  Fixed error message in c.s.u.DelimitedParser where parsed value was not being reported.

  Updated c.s.h.TextLine and c.s.l.TextLine to ignore planner presented fields to allow instances to be re-used.

  Changed c.t.c.SpillableTupleList to use j.u.LinkedList to reduce memory footprint when backing a
  c.t.c.SpillableTupleMap.

  Fixed issue where c.p.Merge into the streamed side of a c.p.HashJoin would produce an incorrect plan.
